PascalParser.java
// Generated from Pascal.g4 by ANTLR 4.9.3

import java.util.HashMap;
import java.util.ArrayList;
import java.util.Scanner;
import java.lang.Math;
import java.lang.String;
import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		PROGRAM=18, VAR=19, REALTYPE=20, BOOLEAN=21, AND=22, OR=23, NOT=24, IF=25, 
		THEN=26, ELSE=27, CASE=28, OF=29, BEGIN=30, END=31, READLN=32, WRITELN=33, 
		REAL=34, BOOL=35, TRUE=36, FALSE=37, SQRT=38, SINE=39, COSINE=40, LN=41, 
		EXP=42, NAME=43, STRING=44, WS=45, COMMENT=46;
	public static final int
		RULE_start = 0, RULE_progName = 1, RULE_varDec = 2, RULE_varLists = 3, 
		RULE_varName = 4, RULE_mainBlock = 5, RULE_statFull = 6, RULE_stat = 7, 
		RULE_writeStat = 8, RULE_writeBlock = 9, RULE_readStat = 10, RULE_ifStat = 11, 
		RULE_caseBegin = 12, RULE_caseStat = 13, RULE_boolCase = 14, RULE_checkBoolCase = 15, 
		RULE_elseCase = 16, RULE_checkElseCase = 17, RULE_doubleCase = 18, RULE_checkDoubleCase = 19, 
		RULE_expr = 20, RULE_boolExpr = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "progName", "varDec", "varLists", "varName", "mainBlock", "statFull", 
			"stat", "writeStat", "writeBlock", "readStat", "ifStat", "caseBegin", 
			"caseStat", "boolCase", "checkBoolCase", "elseCase", "checkElseCase", 
			"doubleCase", "checkDoubleCase", "expr", "boolExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "':'", "'='", "'.'", "':='", "'('", "')'", "'*'", 
			"'/'", "'+'", "'-'", "'<>'", "'<'", "'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "PROGRAM", "VAR", "REALTYPE", "BOOLEAN", 
			"AND", "OR", "NOT", "IF", "THEN", "ELSE", "CASE", "OF", "BEGIN", "END", 
			"READLN", "WRITELN", "REAL", "BOOL", "TRUE", "FALSE", "SQRT", "SINE", 
			"COSINE", "LN", "EXP", "NAME", "STRING", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	HashMap<String, Double> real_memory = new HashMap<>();
	HashMap<String, Boolean> bool_memory = new HashMap<>();
	ArrayList<String> variables = new ArrayList<>();
	Scanner sc = new Scanner(System.in);
	Stack<Boolean> caseStatMatch = new Stack<>();
	final double THRESHOLD = .0001;

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgNameContext progName() {
			return getRuleContext(ProgNameContext.class,0);
		}
		public MainBlockContext mainBlock() {
			return getRuleContext(MainBlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PascalParser.EOF, 0); }
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			progName();
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(45);
				varDec();
				}
			}

			setState(48);
			mainBlock();
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgNameContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(PascalParser.PROGRAM, 0); }
		public TerminalNode NAME() { return getToken(PascalParser.NAME, 0); }
		public ProgNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterProgName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitProgName(this);
		}
	}

	public final ProgNameContext progName() throws RecognitionException {
		ProgNameContext _localctx = new ProgNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_progName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(PROGRAM);
			setState(52);
			match(NAME);
			setState(53);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(PascalParser.VAR, 0); }
		public List<VarListsContext> varLists() {
			return getRuleContexts(VarListsContext.class);
		}
		public VarListsContext varLists(int i) {
			return getRuleContext(VarListsContext.class,i);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitVarDec(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(VAR);
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56);
				varLists();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarListsContext extends ParserRuleContext {
		public Token NAME;
		public ExprContext expr;
		public BoolExprContext boolExpr;
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public TerminalNode REALTYPE() { return getToken(PascalParser.REALTYPE, 0); }
		public TerminalNode NAME() { return getToken(PascalParser.NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode BOOLEAN() { return getToken(PascalParser.BOOLEAN, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public VarListsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varLists; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterVarLists(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitVarLists(this);
		}
	}

	public final VarListsContext varLists() throws RecognitionException {
		VarListsContext _localctx = new VarListsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varLists);
		try {
			int _alt;
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(61);
						varName(true);
						setState(62);
						match(T__1);
						}
						} 
					}
					setState(68);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(69);
				varName(true);
				setState(70);
				match(T__2);
				setState(71);
				match(REALTYPE);
				setState(72);
				match(T__0);

				        while (!variables.isEmpty()) {
				            String var = variables.remove(0);
				            if (!real_memory.containsKey(var) && !bool_memory.containsKey(var)) {
				                real_memory.put(var, new Double(0.0));
				            }
				        }

				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				((VarListsContext)_localctx).NAME = match(NAME);
				setState(76);
				match(T__2);
				setState(77);
				match(REALTYPE);
				setState(78);
				match(T__3);
				setState(79);
				((VarListsContext)_localctx).expr = expr(0);
				setState(80);
				match(T__0);

				        String var = (((VarListsContext)_localctx).NAME!=null?((VarListsContext)_localctx).NAME.getText():null);
				        if (!real_memory.containsKey(var) && !bool_memory.containsKey(var)) {
				            Double value = ((VarListsContext)_localctx).expr.value;        
				            real_memory.put(var, value);
				        }
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83);
						varName(true);
						setState(84);
						match(T__1);
						}
						} 
					}
					setState(90);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(91);
				varName(true);
				setState(92);
				match(T__2);
				setState(93);
				match(BOOLEAN);
				setState(94);
				match(T__0);

				        while (!variables.isEmpty()) {
				            String var = variables.remove(0);
				            if (!real_memory.containsKey(var) && !bool_memory.containsKey(var)) {
				                bool_memory.put(var, false);
				            }
				        }
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				((VarListsContext)_localctx).NAME = match(NAME);
				setState(98);
				match(T__2);
				setState(99);
				match(BOOLEAN);
				setState(100);
				match(T__3);
				setState(101);
				((VarListsContext)_localctx).boolExpr = boolExpr(0);
				setState(102);
				match(T__0);

				        String var = (((VarListsContext)_localctx).NAME!=null?((VarListsContext)_localctx).NAME.getText():null);
				        if (!real_memory.containsKey(var) && !bool_memory.containsKey(var)) {
				            Boolean bool = ((VarListsContext)_localctx).boolExpr.bool;        
				            bool_memory.put(var, bool);
				        }
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public Boolean active;
		public Token NAME;
		public TerminalNode NAME() { return getToken(PascalParser.NAME, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public VarNameContext(ParserRuleContext parent, int invokingState, Boolean active) {
			super(parent, invokingState);
			this.active = active;
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitVarName(this);
		}
	}

	public final VarNameContext varName(Boolean active) throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState(), active);
		enterRule(_localctx, 8, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			((VarNameContext)_localctx).NAME = match(NAME);
			if (_localctx.active) {variables.add((((VarNameContext)_localctx).NAME!=null?((VarNameContext)_localctx).NAME.getText():null));}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainBlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PascalParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(PascalParser.END, 0); }
		public List<StatFullContext> statFull() {
			return getRuleContexts(StatFullContext.class);
		}
		public StatFullContext statFull(int i) {
			return getRuleContext(StatFullContext.class,i);
		}
		public MainBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterMainBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitMainBlock(this);
		}
	}

	public final MainBlockContext mainBlock() throws RecognitionException {
		MainBlockContext _localctx = new MainBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mainBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(BEGIN);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << CASE) | (1L << READLN) | (1L << WRITELN) | (1L << NAME))) != 0)) {
				{
				{
				setState(111);
				statFull(true);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(END);
			setState(118);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatFullContext extends ParserRuleContext {
		public Boolean active;
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public StatFullContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatFullContext(ParserRuleContext parent, int invokingState, Boolean active) {
			super(parent, invokingState);
			this.active = active;
		}
		@Override public int getRuleIndex() { return RULE_statFull; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterStatFull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitStatFull(this);
		}
	}

	public final StatFullContext statFull(Boolean active) throws RecognitionException {
		StatFullContext _localctx = new StatFullContext(_ctx, getState(), active);
		enterRule(_localctx, 12, RULE_statFull);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			stat(_localctx.active);
			setState(121);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Boolean active;
		public Token NAME;
		public BoolExprContext boolExpr;
		public ExprContext expr;
		public TerminalNode NAME() { return getToken(PascalParser.NAME, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public WriteStatContext writeStat() {
			return getRuleContext(WriteStatContext.class,0);
		}
		public ReadStatContext readStat() {
			return getRuleContext(ReadStatContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public CaseStatContext caseStat() {
			return getRuleContext(CaseStatContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatContext(ParserRuleContext parent, int invokingState, Boolean active) {
			super(parent, invokingState);
			this.active = active;
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalListener ) ((PascalListener)listener).exitStat(this);
		}
	}

	public final StatContext stat(Boolean active) throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState(), active);
		enterRule(_localctx, 14, RULE_stat);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				((StatContext)_localctx).NAME = match(NAME);
				setState(124);
				match(T__5);
				setState(125);
				((StatContext)_localctx).boolExpr = boolExpr(0);
				if (_localctx.active && bool_memory.containsKey((((StatContext)_localctx).NAME!=null?((StatContext)_localctx).NAME.getText():null))) {bool_memory.put((((StatContext)_localctx).NAME!=null?((StatContext)_localctx).NAME.getText():null), new Boolean(((StatContext)_localctx).boolExpr.bool));}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				((StatContext)_localctx).NAME = match(NAME);
				setState(129);
				match(T__5);
				setState(130);
				((StatContext)_localctx).expr = expr(0);
				if (_localctx.active && real_memory.containsKey((((StatContext)_localctx).NAME!=null?((StatContext)_localctx).NAME.getText():null))) {real_memory.put((((StatContext)_localctx).NAME!=null?((StatContext)_localctx).NAME.getText():null), new Double(((StatContext)_localctx).expr.value));}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				writeStat(_localctx.active);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				readStat(_localctx.active);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(135);
				ifStat(_localctx.active);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				caseStat(_localctx.active);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
